# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  20 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Enable RC_NEED="foo" and RC_USE="bar" in /etc/conf.d/${SERVICE}
    so that users can overlay service dependencies with their own.
    Bug #140865

  19 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Rework dolisting and net.lo to use bash globbing instead of ls to save
    on un-needed forking.

  18 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Report services scheduled to be started by another service as
    started OK for splash.

  12 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Add bootmisc as a CRITICAL_SERVICE as too many init scripts don't
    depend on it, which means that /var/run and others could get cleaned after
    daemons write important things there - like pidfiles - when using parallel
    startup.

  10 Jul 2006; Roy Marples <uberlord@gentoo.org>:

    Fixed some internal net dependencies with >1 active net service
    Services can now be scheduled on any inactive services.

  27 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Document that depend_eth0() only works in conf.d/net and
    not conf.d/net.$profile, #137727.

  27 Jun 2006; Mike Frysinger <vapier@gentoo.org>:

    Make sure modules-update generates the devfs config files properly #136174.

  25 Jun 2006; Mike Frysinger <vapier@gentoo.org>:

    Make sure modprobe.conf is generated properly when done by hand otheriwse 
    old syntax can leak in #132668 by Alexander Skwar.

  23 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Fix rc-status broken link reporting properly, #137656

    Replace grep with [[ $(</proc/foo) =~ reges ]]  where appropriate.

  19 Jun 2006; Roy Marples <uberlord@gentoo.org>:

    Preliminary support for dscape ieee80211 stack devices.

    Apply vserver patches from Benedikt Boehm.

  18 Jun 2006; Mike Frysinger <vapier@gentoo.org>:
