@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  26 Jul 2007; Roy Marples <uberlord@gentoo.org>:
+
+    wpa_supplicant now launches even when wireless radio has been killed
+    as if the user enables it then it will associate and work without the 
+    user having to restart the interface.
+
   20 Jul 2006; Roy Marples <uberlord@gentoo.org>:
 
     Enable RC_NEED="foo" and RC_USE="bar" in /etc/conf.d/${SERVICE}
